--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "packageManager": "pnpm@9.9.0",
   "dependencies": {
-    "ytil": "workspace:^"
+    "expr-eval": "^2.0.2",
+    "jexpr": "^1.0.0-pre.9",
+    "ytil": "workspace:*"
   }
 }
