Changed to PNPM

--- a/package.json
+++ b/package.json
@@ -4,24 +4,30 @@
   "description": "Titelaar templating engine.",
   "author": "Joost Lubach",
   "license": "MIT",
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
   "exports": {
-    ".": "./src/index.ts"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
   },
   "scripts": {
-    "lint": "eslint src --ext ts,tsx",
+    "build": "pnpm clean && pnpm build:tsc",
+    "build:tsc": "tsc -p tsconfig.prod.json",
+    "clean": "rimraf dist",
+    "lint": "eslint src --ext .ts",
     "check": "tsc -p . --noEmit",
     "test": "NODE_ENV=test jest"
   },
-  "peerDependencies": {
-    "typescript": "*"
-  },
   "devDependencies": {
+    "@types/lodash": "^4.17.15",
+    "copyfiles": "^2.4.1",
+    "rimraf": "^5.0.5",
+    "tsc-alias": "^1.8.8",
     "typescript": "5.4.3"
   },
-  "packageManager": "pnpm@9.9.0",
   "dependencies": {
-    "expr-eval": "^2.0.2",
+    "lodash": "^4.17.21",
     "ytil": "workspace:*"
   }
 }
