--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "typescript": "*"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.20",
+    "copyfiles": "^2.4.1",
+    "rimraf": "^6.0.1",
+    "tsc-alias": "^1.8.16",
     "typescript": "5.4.3"
   },
   "packageManager": "pnpm@9.9.0",
