--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.20",
     "copyfiles": "^2.4.1",
+    "js-yaml": "^4.1.0",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.16",
     "typescript": "5.4.3"
