--- a/package.json
+++ b/package.json
@@ -4,27 +4,25 @@
   "description": "Randy templating engine.",
   "author": "Joost Lubach",
   "license": "MIT",
-  "main": "./dist/index.js",
+  "main": "./src/index.ts",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    }
+    ".": "./src/index.ts"
   },
   "scripts": {
-    "build": "pnpm clean && pnpm build:tsc",
-    "build:tsc": "tsc -p tsconfig.prod.json",
-    "clean": "rimraf dist",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src --ext ts,tsx",
     "check": "tsc -p . --noEmit",
     "test": "NODE_ENV=test jest"
+  },
+  "peerDependencies": {
+    "typescript": "*"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.20",
     "typescript": "5.4.3"
   },
+  "packageManager": "pnpm@9.9.0",
   "dependencies": {
-    "lodash": "^4.17.21",
+    "expr-eval": "^2.0.2",
     "ytil": "workspace:*"
   }
 }
