--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "randy-templates",
+  "name": "templates",
   "version": "1.0.0",
   "description": "Randy the Renderer templating engine.",
   "author": "Joost Lubach",
