--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.20",
+    "js-yaml": "^4.1.1",
     "rimraf": "^6.0.1",
     "typescript": "^5.8.3"
   },
