--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "jest": "^30.2.0",
+    "jsep": "^1.3.9",
     "lodash": "^4.17.21",
     "ytil": "workspace:*"
   }
