--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@jsep-plugin/object": "^1.2.2",
     "jest": "^30.2.0",
     "jsep": "^1.3.9",
     "lodash": "^4.17.21",
