--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@jsep-plugin/object": "^1.2.2",
+    "@jsep-plugin/spread": "^1.0.3",
     "jest": "^30.2.0",
     "jsep": "^1.3.9",
     "lodash": "^4.17.21",
