--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^30.2.0",
     "jsep": "^1.3.9",
     "lodash": "^4.17.21",
-    "ytil": "workspace:*"
+    "ytil": "workspace:*",
+    "zod": "^4.1.5"
   }
 }
